fixed time chooser overflow on small screens

--- a/scss/calendarApp.scss
+++ b/scss/calendarApp.scss
@@ -52,7 +52,7 @@
 
   .timeCont {
     margin-left: auto;
-    width: 20em;
+    max-width: 20em;
     background-color: aliceblue;
     border-style: solid;
     border-color: #f15925;
